--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,12 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+	padding: 0;
+	margin: 0;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	margin: 0;
 }
