--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,42 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url('../images/bgtile.png') repeat-x;
+}
+.clear {
+  clear: both;
+}
+.button {
+  color: #e1e8ed;
+  font-weight: 700;
+  font-size: 0.8rem;
+  padding: 8px;
+  border-radius: 2px;
+  background: linear-gradient(#799ab7, #447196);
+  border: none;
+  box-shadow: 0 0 2px 1px #06365f;
+}
+.button img {
+  vertical-align: middle;
+  margin-right: 5px;
+}
+.container {
+  max-width: 850px;
+  margin: 0 auto;
+}
+#main-content {
+  margin-top: 100px;
+}
+#phones {
+  float: left;
+  margin-right: 50px;
+}
+#login {
+  padding: 20px 0;
+}
+#login-button {
+  float: right;
+  margin-top: 18px;
+}
+#text {
 }
