--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,19 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.header {
+  background-color: #1c5380;
+  padding: 100px;
+}
+#logo {
+  float: left;
+  margin-top: 20px;
+}
+#phones {
+  float: left;
+  margin: 100px 50px 0 100px;
+}
+#frame {
+}
+.description {
+}
