--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,53 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  }
+
+.main-box{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
+
+.left{
+  width: 30vw;
+  border: solid 1px black;
+}
+ .right{
+   width: 40vw;
+   border: solid 1px black;
+ }
+ .header{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+ }
+ .button{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   background: blue;
+   width: 7rem;
+ }
+ .header img{
+   
+ }
+ .info{
+   background-image: url("../images/frame.png");
+   background-repeat: no-repeat;
+   border: solid 1px greenyellow;
+   
+ }
+ footer{
+  text-align: center;;
+ }
+
+ footer ul{
+   list-style: none;;
+ }
+ footer ul li{
+   display: inline-block;
+ }
+
