--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,6 +3,12 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+html {
+  margin:0;
+  padding: 0;
+  font: 0;
+
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -13,5 +19,25 @@ body {
   background-image: url(../starter-code/images/frame.png);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 600px;
+  height: 800px;
 } 
+
+.top{
+  background:#1c5380 ;
+  height: 300px;
+}
+
+.iphone{
+  position: absolute;
+  top:125px;
+  left:200px;
+
+}
+
+.box{
+  position: absolute;
+  top:125px;
+  right: 200px;
+  height: 512px;
+  width: 400px;
+}
