--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,6 +1,6 @@
 /*
 Colors to use:
-dark blue: #06365f
+dark blue: 
 light blue: #1c5380
 */
 html {
@@ -37,7 +37,29 @@ body {
 .box{
   position: absolute;
   top:125px;
-  right: 200px;
+  left: 600px;
   height: 512px;
-  width: 400px;
+  width: 500px;
+}
+
+.col-rside{
+  float: right;
+  }
+
+.button{
+  background:#1c5380;
+  border:1px solid #06365f;
+  box-shadow: 2px 2px 10px 0 #06365f;
+  border-radius: 3px;
+  color: white;
+  margin-top: 20px;
+  padding: 5px 7px;
+}
+
+.img{
+  margin-right: 5px;
+}
+
+.text{
+  padding-top:5px;
 }
