working in the box

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -67,7 +67,7 @@ body {
 .description{
   background: white;
   padding: 10px 35px;
-  border:1px solid black;
+  border:1px solid #06365f;
   border-radius:10px;
   height: 400px;
   color: #06365f;
