--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -11,4 +11,25 @@ light blue: #1c5380
 body {
 	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin: 0;
+	background-image: url('../images/bgtile.png');
+	background-repeat: repeat-x;
+}
+.container {
+	width: 70%;
+	margin: 0 auto;
+}
+.phone-img {
+	float: left;
+	position: relative;
+	top: 6em;
+}
+
+.main-content {
+	width: 50%;
+	float: right;
+	position: relative;
+	top: 6.5em;
+}
+.links {
+	clear: both;
 }
