--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,48 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+header{
+  background: url("../images/bgtile.png"); background-repeat: x;
+  height: 300px;
+}
+.centerbox{
+  display: flex;
+  width: 900px;
+  margin-top: -150px;
+  background: red;
+  margin-left: auto;
+  margin-right: auto;
+ }
+.phones{
+  
+}
+.instagram{
+  margin-left: 80px;
+  
+}
+.second{
+  background: url("../images/frame.png");
+  
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1{
+  font-family: 'Courier New', Courier, monospace; 
+  color: #06365f;
+
+}
+p{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+  text-align: center;
+  color: black;
+  position: center;
+
+}
+
+
+
+
