--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,43 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+body {
+
+  background: url('../images/bgtile.png');
+  background-size: 100vw 250px;
+  background-repeat: no-repeat;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+
+main {
+  width: 504px;
+}
+
+article {
+  background-image: url('../images/frame.png');
+  padding: 30px 30px 0 30px;
+}
+
+article h2 {
+  padding: 0;
+  margin: 0;
+  color: #06365f;
+}
+
+header img {
+  float: left;
+}
+
+header button{
+  float: right;
+}
+
+header .clear {
+  clear: both;
 }
