--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,18 +4,12 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-
-body {
-
-  background: url('../images/bgtile.png');
-  background-size: 100vw 250px;
-  background-repeat: no-repeat;
-}
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  
+  background: url('../images/bgtile.png');
+  background-size: 100vw 250px;
+  background-repeat: no-repeat;
 }
 
 main {
@@ -43,4 +37,24 @@ header button{
 
 header .clear {
   clear: both;
+}
+
+footer ul {
+  width: 800px;
+  padding: 0;
+  margin: 20px auto;
+}
+
+footer li {
+  display: inline-block;
+  vertical-align: middle;
+  list-style-type: none;
+  color: #1c5380;
+  padding: 10px;
+  font-weight: 600;
+}
+
+#copyright {
+  padding: 20px;
+  color: #888;
 }
