--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -12,21 +12,6 @@ body {
   background-repeat: no-repeat;
 }
 
-main {
-  width: 504px;
-}
-
-article {
-  background-image: url('../images/frame.png');
-  padding: 30px 30px 0 30px;
-}
-
-article h2 {
-  padding: 0;
-  margin: 0;
-  color: #06365f;
-}
-
 header img {
   float: left;
 }
@@ -37,6 +22,38 @@ header button{
 
 header .clear {
   clear: both;
+}
+
+main {
+  width: 504px;
+}
+
+article {
+  background-image: url('../images/frame.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 30px 30px 0 30px;
+}
+
+article h2 {
+  width: 250px;
+  padding: 0;
+  margin: 0;
+  color: #06365f;
+}
+
+main p {
+  width: 400px;
+  margin: 5px auto;
+}
+
+#images {
+  width: 400px;
+  margin: 0 auto;
+}
+
+#images img {
+  padding: 0 10px 0 0;
 }
 
 footer ul {
