--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,23 @@
 /*
 Colors to use:
-dark blue: #06365f
-light blue: #1c5380
+dark blue: #06365f para las letras del h2
+light blue: #1c5380 para la parte de arriba
 */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+.header{
+
+  text-align: right;
+  background: linear-gradient(to bottom, #1c5380, #06365f);
+}
+
+.header button{
+  background: #1c5380;
+  color:white;
+  border:solid 1px #1c5380;
+  
 }
