--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -10,14 +10,40 @@ body {
 
 }
 .header{
-  text-align: right;
   background: linear-gradient(to bottom, #1c5380, #06365f);
   height: 400px;
 }
 
 .header button{
   background: #1c5380;
-  color:white;
-  border:solid 1px #1c5380;
-  margin: 249px 185px 0 71px;
+  color: white;
+  border: solid 1px #1c5380;
+  height: 37px;
+  width: 97px;
+  position: relative;
+  float: left;
+  left: 783px;
+  top: 225px;
+}
+
+.logo{
+  position: relative;
+  float: left;
+  left: 359px;
+  top: 100px;
+}
+
+.phone{
+  position: relative;
+  float: left;
+  left: 253px;
+  bottom: 211px;
+}
+
+.logobox{
+  position: relative;
+  float: left;
+  left: 397px;
+  bottom: 107px;
+
 }
