--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,6 +8,7 @@ light blue: #1c5380
 	margin: 0;
 }
 
+/* GENERAL STRUCTURE */
 body {
 	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin: 0;
@@ -16,17 +17,43 @@ body {
 }
 .container {
 	width: 70%;
-	margin: 5.5em auto 4em;
-	overflow: auto;
+	margin: 5.5em auto;
 }
 .phone-img {
 	float: left;
-	position: relative;
 }
 
 .main-content {
 	width: 50%;
 	float: right;
+	margin-right: 6em;
+}
+.clearfix {
+	clear: both;
+}
+
+/* TEXT SECTION */
+.brand-img {
+	float: left;
+}
+.login-btn {
+	background: linear-gradient(#678cac, #4c769c);
+	box-shadow: 0 0.1em 0.1em #366188;
+	border: none;
+	font-size: 0.8em;
+	color: #fff;
+	font-weight: 600;
+	font-size: 0.9em;
+	padding: 0.5em 1em 0.5em 0.8em;
+	border-radius: 0.2em;
+	border: 0.1em solid #366188;
+	float: right;
+	margin-top: 1em;
+	margin-right: 1em;
+}
+.login-btn img {
+	vertical-align: bottom;
+	margin-right: 0.6em;
 }
 .info {
 	background-image: url('../images/frame.png');
@@ -36,9 +63,11 @@ body {
 }
 .info h2 {
 	color: #06365f;
+	font-size: 2em;
+	line-height: 1.2em;
 }
 .info p {
-	font-size: 0.9em;
+	font-size: 1em;
 	margin-top: 1em;
 }
 .store-img {
@@ -51,12 +80,12 @@ body {
 
 /* FOOTER */
 .links {
-	clear: both;
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 0.8em;
 	font-weight: 500;
 	color: #bfc0c1;
+	margin-top: 5.5em;
 }
 .links a,
 .links span {
